JDK-17 compiling enabled